--- a/src/main/resources/templates/Common/Header.html
+++ b/src/main/resources/templates/Common/Header.html
@@ -7,10 +7,10 @@
   <nav>
     <a href="#" class="logo">🌸 GreenLife</a>
     <ul class="nav-center">
-      <li><a href="#">Trang chủ</a></li>
-      <li><a href="#" class="active">Sản phẩm</a></li>
-      <li><a href="#">Danh mục</a></li>
-      <li><a href="#">Liên hệ</a></li>
+      <li><a href="home">Trang chủ</a></li>
+      <li><a href="list" class="active">Sản phẩm</a></li>
+      <li><a href="category">Danh mục</a></li>
+      <li><a href="contact">Liên hệ</a></li>
     </ul>
     <div class="nav-right">
       <input class="search-input" type="text" placeholder="Tìm kiếm..." />
@@ -44,7 +44,9 @@
           <span>Tổng:</span>
           <strong id="cartTotal">0đ</strong>
         </div>
-        <button class="view-cart-btn">🧾 Xem giỏ hàng</button>
+        <button id="view-cart-btn" class="view-cart-btn">
+          🧾 Xem giỏ hàng
+        </button>
       </div>
     </div>
   </nav>
