--- a/src/main/resources/templates/Page/Product/home.html
+++ b/src/main/resources/templates/Page/Product/home.html
@@ -273,6 +273,8 @@
     </section>
 
     <button id="scrollTopBtn">⬆️</button>
+    <div th:replace="common/chatbox :: siteChatbox"></div>
+
     <div th:replace="common/footer :: siteFooter"></div>
     <script>
       const scrollBtn = document.getElementById("scrollTopBtn");
